--- a/index.html
+++ b/index.html
@@ -41,39 +41,111 @@
         code is implemented.
         -->
 
+        <div id="hour9" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour10" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour11" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour12" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">12PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour13" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour14" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour15" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour16" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
+        <div id="hour17" class="row time-block">
+          <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
+          <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+          <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+            <i class="fas fa-save" aria-hidden="true"></i>
+          </button>
+        </div>
+
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
+      <!--<div id="hour-9" class="row time-block past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
-      </div>
+      </div> -->
 
       <!-- Example of a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
+      <!--<div id="hour-10" class="row time-block present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
-      </div>
+      </div> -->
 
       <!-- Example of a future time block. The "future" class adds a green background color. -->
-      <div id="hour-11" class="row time-block future">
+      <!--<div id="hour-11" class="row time-block future">
         <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-    </div>
+    </div> -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"></script>
-
     <script src="assets/js/script.js"></script>
   </body>
 </html>
